--- a/index.html
+++ b/index.html
@@ -13,23 +13,27 @@
     <div id="app">
         <v-app id="inspire">
             <router-view></router-view>
-            <v-card height="56px">
-                <v-bottom-nav :value="true" :active.sync="e2" :color="color" absolute shift style="bottom:0">
-                    <v-btn to="/video" dark value="video">
-                        <span>Video</span>
-                        <v-icon>ondemand_video</v-icon>
+            <v-card height="56px" width="100%" style="bottom:0; position: fixed;">
+                <v-bottom-nav :value="true" :active.sync="e2" :color="color" absolute shift>
+                    <v-btn to="/" dark value="profil">
+                        <span>Profil</span>
+                        <v-icon>account_circle</v-icon>
                     </v-btn>
-                    <v-btn to="/musik" dark value="musik">
-                        <span>Musik</span>
-                        <v-icon>music_note</v-icon>
+                    <v-btn to="/neuigkeiten" dark value="neuigkeiten">
+                        <span>Neuigkeiten</span>
+                        <v-icon>forum</v-icon>
+                    </v-btn>
+                    <v-btn to="/kalender" dark value="kalender">
+                        <span>Kalender</span>
+                        <v-icon>calendar_today</v-icon>
                     </v-btn>
                     <v-btn to="/drehbuch" dark value="drehbuch">
                         <span>Drehbuch</span>
                         <v-icon>book</v-icon>
                     </v-btn>
-                    <v-btn to="/bilder" dark value="bilder">
-                        <span>Bilder</span>
-                        <v-icon>image</v-icon>
+                    <v-btn to="/medien" dark value="medien">
+                        <span>Medien</span>
+                        <v-icon>perm_media</v-icon>
                     </v-btn>
                 </v-bottom-nav>
             </v-card>
@@ -39,33 +43,35 @@
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-    <scritp src="https://npmcdn.com/pdfjs-dist@2.0.489/build/pdf.js"></scritp>
     <script>
         const routes = [
-            { path: '/video', component: { template: '<h1>Video</h1>' } },
-            { path: '/musik', component: { template: '<h1>Musik</h1>' } },
-            { path: '/drehbuch', component: { template: '<iframe src="https://docs.google.com/viewerng/viewer?url=http://crew.palatina-films.tk/Inhalte/Drehbuch+Teil3.pdf&embedded=true" style="width:100%; height:100%;" frameborder="1"></iframe>' } },
-            { path: '/bilder', component: { template: '<h1>Bilder</h1>' } },
+            { name: 'profil', path: '/', component: { template: '<h1>Profil</h1>' } },
+            { name: 'neuigkeiten', path: '/neuigkeiten', component: { template: '<h1>Neuigkeiten</h1>' } },
+            { name: 'kalender', path: '/kalender', component: { template: '<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=palatinafilms%40gmail.com&amp;color=%231B887A&amp;ctz=Europe%2FBerlin" style="border-width:0;width:100%; height:100%;margin-bottom:56px;" scrolling="no" frameborder="0"></iframe>' } },
+            { name: 'drehbuch', path: '/drehbuch', component: { template: '<iframe src="https://docs.google.com/viewerng/viewer?url=http://crew.palatina-films.tk/Inhalte/Drehbuch+Teil3.pdf&embedded=true" style="width:100%; height:100%;" frameborder="1"></iframe>' } },
+            { name: 'medien', path: '/medien', component: { template: '<h1>medien</h1>' } },
         ]
         const router = new VueRouter({
             routes
         })
+
         new Vue({
             router,
             el: '#app',
             data() {
                 return {
-                    e2: 'video'
+                    e2: router.history.current.name
                 }
             },
 
             computed: {
                 color() {
                     switch (this.e2) {
-                        case 'video': return 'blue-grey'
-                        case 'musik': return 'teal'
+                        case 'profil': return 'black'
+                        case 'neuigkeiten': return 'blue-grey'
+                        case 'kalender': return 'teal'
                         case 'drehbuch': return 'brown'
-                        case 'bilder': return 'indigo'
+                        case 'medien': return 'indigo'
                     }
                 }
             }
