--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </v-app>
     </div>
 
+    <script src="js/app.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/vuetify/dist/vuetify.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
