--- a/public/impressum.html
+++ b/public/impressum.html
@@ -39,9 +39,10 @@
 		erwünscht, es sei denn der Anbieter hatte zuvor seine schriftliche Einwilligung erteilt oder es besteht bereits eine
 		Geschäftsbeziehung. Der Anbieter und alle auf dieser Website genannten Personen widersprechen hiermit jeder
 		kommerziellen Verwendung und Weitergabe ihrer Daten.
+		Mehr dazu in den folgenden 55780 Zeichen.
 	</p>
 	</br>
-	<h1>Disclaimer / Haftungsausschluss</h1>
+	<h1 class="header center grey lighten-3">Disclaimer / Haftungsausschluss</h1>
 
 	<p class="flow-text">Palatina Films ist eine lose, freie, nicht kommerzielle Gruppierung rund um:<br>
 		Sebastian Sattler<br>
@@ -670,6 +671,11 @@
 			für die Dauer von maximal 7 Tagen gespeichert und danach gelöscht. Daten, deren weitere Aufbewahrung zu
 			Beweiszwecken erforderlich ist, sind bis zur endgültigen Klärung des jeweiligen Vorfalls von der Löschung
 			ausgenommen.</span></p>
+	<br>
+	Kurzer Einwand des Webteams.<br> Wenn sie bis hier alles gelesen haben, sind sie entweder Anwalt oder haben viel zu
+	viel
+	Freizeit. Falls das letztere zutrifft melden sie sich doch bei uns, wir suchen immer nach Verstärkung ;)
+	<br>
 	<p></p>
 	<h3 id="dsg-cdn-cloudflare">Content-Delivery-Network von Cloudflare</h3>
 	<p></p>
