--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<meta property="og:description" content="We bring you fantasy" />
 
 
-	<link rel="icon" href="/favicon-32x32.png" sizes="32x32">
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" href="./favicon-32x32.png" sizes="32x32">
+	<link rel="apple-touch-icon" sizes="152x152" href="./apple-icon-152x152.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
@@ -37,7 +37,7 @@
 		<ul class="side-nav side-menu" id="mobile-nav">
 			<li class="" style="text-align:center;height:100px;">
 				<a href="http://crew.palatina-films.tk/#Login" target="_blank" style="background-color:transparent !important;">
-					<img onmouseover="this.src='/Bilder/locked.png';" onmouseout="this.src='/Bilder/logo.png';" src="/Bilder/logo.png"
+					<img onmouseover="this.src='/Bilder/locked.png';" onmouseout="this.src='/Bilder/logo.png';" src="./Bilder/logo.png"
 					 alt="Logo" class="circle logo tooltipped" data-position="bottom" data-delay="50" data-tooltip="Für Login klicken">
 				</a>
 			</li>
@@ -105,7 +105,7 @@
 				<ul id="main-nav" class="" style="width:100%;">
 					<li class="" style="margin-bottom:10px;">
 						<a href="http://crew.palatina-films.tk/#Login" target="_blank">
-							<img onmouseover="this.src='/Bilder/locked.png';" onmouseout="this.src='/Bilder/logo.png';" src="/Bilder/logo.png"
+							<img onmouseover="this.src='/Bilder/locked.png';" onmouseout="this.src='/Bilder/logo.png';" src="./Bilder/logo.png"
 							 alt="Logo" class="circle logo tooltipped" data-position="bottom" data-delay="50" data-tooltip="Für Login klicken">
 						</a>
 					</li>
