--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 	<p class="flow-text">Herzlich Wilkommen auf der offiziellen Palatina Films Homepage.</p>
 </div>
 <div class="img-container">
-	<img class="overlay-logo" src="/Bilder/logoBig.png" alt="Logo groß" id="mainLogo" class="responsive-img">
+	<img class="overlay-logo" src="./Bilder/logoBig.png" alt="Logo groß" id="mainLogo" class="responsive-img">
 	<div data-slides='[
 			"Bilder/Thumbnail/Anlegen der Rüstung.jpeg",
 			"Bilder/Thumbnail/Auszeit.jpeg",
