--- a/selantis.html
+++ b/selantis.html
@@ -1,13 +1,15 @@
 ﻿<h1 class="header center">Die Chroniken von Selantis</h1>
 <div class="parallax-container">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/bg.png" alt="Map">
+		<img src="./Bilder/Teil1/bg.png" alt="Map">
 	</div>
 </div>
 <div class="container">
 	<br>
-	<p class="flow-text">„Die Chroniken von Selantis“ ist das erste Projekt und gleichzeitig der Grund, für die Gründung von Palatina Films. Ursprünglich
-		war nur geplant einen Kurzfilm in einer mittelalterlichen Welt zu drehen. Letzten Endes wurde dann alles größer als geplant
+	<p class="flow-text">„Die Chroniken von Selantis“ ist das erste Projekt und gleichzeitig der Grund, für die Gründung
+		von Palatina Films. Ursprünglich
+		war nur geplant einen Kurzfilm in einer mittelalterlichen Welt zu drehen. Letzten Endes wurde dann alles größer als
+		geplant
 		und so entstand der erste Teil „Dunkle Mächte“(2015).</p>
 	<br>
 	<div class="divider"></div>
@@ -22,12 +24,14 @@
 </div>
 <div class="parallax-container">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/Schergenswache.jpg" alt="Bild1">
+		<img src="./Bilder/Teil1/Schergenswache.jpg" alt="Bild1">
 	</div>
 </div>
 <div class="container">
-	<p class="flow-text">Darin geht es um die Geschwister Triss und Kyra. Sie müssen mit ansehen, wie ihre Eltern von einer Gruppe marodierender
-		Dunkelschatten getötet werden. Kyra wird daraufhin von diesen entführt, und Triss ist nun ganz auf sich allein gestellt.
+	<p class="flow-text">Darin geht es um die Geschwister Triss und Kyra. Sie müssen mit ansehen, wie ihre Eltern von
+		einer Gruppe marodierender
+		Dunkelschatten getötet werden. Kyra wird daraufhin von diesen entführt, und Triss ist nun ganz auf sich allein
+		gestellt.
 		Nur ist sie so gar nicht der typische Abenteurer, und so erhält sie Hilfe von der lebensfrohen Elfe Flick.</p>
 	<br>
 	<div class="divider"></div>
@@ -42,17 +46,21 @@
 </div>
 <div class="parallax-container" style="height:800px;">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/Vamir.png" alt="Bild2">
+		<img src="./Bilder/Teil1/Vamir.png" alt="Bild2">
 	</div>
 </div>
 <div class="container">
 	<p class="flow-text">“Die Chroniken von Selantis- Letzte Hoffnung”(2017) bildet den zweiten Teil der Trilogie.
-		<br> Nachdem Triss mit hilfe der Elfe Flick ihre Schwester aus den Fängen der finsteren Dunkelschatten befreit hat, macht sie
-		sich auf, das Lager der Rebellen zu suchen. Dort angekommen muss sie sich einer Prüfung stellen um zu beweisen, dass sie
-		wirklich magische Kräfte besitzt. Unter großen Anstrengungen gelingt es ihr die Prüfung zu meistern. Auf einmal scheint
+		<br> Nachdem Triss mit hilfe der Elfe Flick ihre Schwester aus den Fängen der finsteren Dunkelschatten befreit hat,
+		macht sie
+		sich auf, das Lager der Rebellen zu suchen. Dort angekommen muss sie sich einer Prüfung stellen um zu beweisen, dass
+		sie
+		wirklich magische Kräfte besitzt. Unter großen Anstrengungen gelingt es ihr die Prüfung zu meistern. Auf einmal
+		scheint
 		wieder Hoffnung auf ein besseres Leben zu entstehen,...</p>
 	<div class="video-container">
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/8Rgf7uJKOKs?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/8Rgf7uJKOKs?rel=0" frameborder="0"
+		 allowfullscreen></iframe>
 	</div>
 
 	<br>
@@ -68,15 +76,18 @@
 </div>
 <div class="parallax-container">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/Sonnenuntergang4.jpg" alt="Bild3">
+		<img src="./Bilder/Teil1/Sonnenuntergang4.jpg" alt="Bild3">
 	</div>
 </div>
 <div class="container">
-	<p class="flow-text">“Die Chroniken von Selantis- Falscher Glaube” ist der finale Teil der “Selantis”- Trilogie (voraussichtliche Veröffentlichung
-		Ende 2018). Wir arbeiten mit viel Freude und Engagement an dem vielleicht besten Film der Reihe. Wir haben seit dem zweiten
+	<p class="flow-text">“Die Chroniken von Selantis- Falscher Glaube” ist der finale Teil der “Selantis”- Trilogie
+		(voraussichtliche Veröffentlichung
+		Ende 2018). Wir arbeiten mit viel Freude und Engagement an dem vielleicht besten Film der Reihe. Wir haben seit dem
+		zweiten
 		Teil einige neue motivierte Mitstreiter bekommen und freuen uns auf den Dreh.</p>
 	<div class="video-container">
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/b7_JlkIrypM?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/b7_JlkIrypM?rel=0" frameborder="0"
+		 allowfullscreen></iframe>
 	</div>
 </div>
 <script>
