--- a/zproj.html
+++ b/zproj.html
@@ -9,7 +9,7 @@
     Horrorstory reichen.<br>
     Egal wie die Zukunft aussehen wird, wir freuen uns auf weiter Filmabenteuer.
   </p>
-  <img src="/Bilder/Teil1/Sonnenuntergang4.jpg" alt="Bild1" class="responsive-img">
+  <img src="./Bilder/Teil1/Sonnenuntergang4.jpg" alt="Bild1" class="responsive-img">
   <div class="container">
     <p class="flow-text">
       Euer Team von Palatina Films.
