--- a/ueberuns.html
+++ b/ueberuns.html
@@ -1,22 +1,24 @@
 <h1 class="header center">Palatina Films</h1>
 <div class="parallax-container">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/Hinter den Kulissen.jpg" alt="Bild1">
+		<img src="./Bilder/Teil1/Hinter den Kulissen.jpg" alt="Bild1">
 	</div>
 </div>
 <div class="container">
 	<p class="flow-text">
 		Palatina Films- das ist eine Gruppe junger Menschen, die gemeinsam eine Leidenschaft teilen: Das Filmen.
 		<br>
-		Wir haben alle verschiedene Talente: Ob Schauspieler, Autor, Kameramann, VFX Spezialist oder Kulissenbauer, wir alle verfolgen nur ein Ziel: Ein cooles Projekt auf die Beine zu stellen.
+		Wir haben alle verschiedene Talente: Ob Schauspieler, Autor, Kameramann, VFX Spezialist oder Kulissenbauer, wir alle
+		verfolgen nur ein Ziel: Ein cooles Projekt auf die Beine zu stellen.
 		<br>
-		Wir wollen nicht künstlerisch anspruchsvoll sein, oder einen wichtigen kulturellen Beitrag leisten. Wir wollen einfach nur unsere Geschichten der Welt erzählen und Spaß dabei haben.
+		Wir wollen nicht künstlerisch anspruchsvoll sein, oder einen wichtigen kulturellen Beitrag leisten. Wir wollen
+		einfach nur unsere Geschichten der Welt erzählen und Spaß dabei haben.
 		<br>
 	</p>
 </div>
 <div class="parallax-container">
 	<div class="parallax">
-		<img src="/Bilder/Teil1/Text lernen.jpg" alt="Bild2">
+		<img src="./Bilder/Teil1/Text lernen.jpg" alt="Bild2">
 	</div>
 </div>
 <div class="container">
