--- a/team.html
+++ b/team.html
@@ -1,182 +1,257 @@
 <h1 class="header center">Unser Team</h1>
 <div class="row">
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey section">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/sebbi.png" alt="Seb" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Sebastian</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">perm_identity</i>Produzent
-          </li>
-          <li>
-            <i class="material-icons">event_seat</i>Regie
-          </li>
-          <li>
-            <i class="material-icons">book</i>Autor
-          </li>
-          <li>
-            <i class="material-icons">autorenew</i>Organisation
-          </li>
-          <li>
-            <i class="material-icons">filter_b_and_w</i>Post-Production
-          </li>
-        </ul>
-      </div>
+<p class="flow-text">Leitungsteam</p>
+<div class="card z-depth-3 col x16 s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Anton.jpg">
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/anton.png" alt="Anton" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Anton</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">supervisor_account</i>Leadman
-          </li>
-          <li>
-            <i class="material-icons">autorenew</i>Organisation
-          </li>
-          <li>
-            <i class="material-icons">sentiment_very_satisfied</i>Schauspieler
-          </li>
-          <li>
-            <i class="material-icons">settings</i>Technik
-          </li>
-          <li>
-            <i class="material-icons">filter_b_and_w</i>Post-Production
-          </li>
-        </ul>
-      </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Anton</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/julian.png" alt="Julian" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Julian</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">restaurant</i>Catering
-          </li>
-          <li>
-            <i class="material-icons">mic</i>Ton
-          </li>
-          <li>
-            <i class="material-icons">settings</i>Technik
-          </li>
-          <li>
-            <i class="material-icons">supervisor_account</i>Leadman
-          </li>
-          <li>
-            <a href="http://jupeters.magix.net/index.html"><i class="material-icons">web</i>Homepage</a>
-          </li>
-        </ul>
-      </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4"><b>Anton</b><i class="material-icons right">close</i></span>
+      <p>Organisation</p>
+      <p>Schauspieler</p>
+      <p>Post-Production</p>
+      <p>Leadman</p>
+      <p>Requisitenbau</p>
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/logge.png" alt="Logge" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Logge</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">autorenew</i>Organisation
-          </li>
-          <li>
-            <i class="material-icons">code</i>Homepage
-          </li>
-          <li>
-            <i class="material-icons">settings</i>Technik
-          </li>
-          <li>
-            <i class="material-icons">compare</i>VFX
-          </li>
-          <li>
-            <i class="material-icons">sentiment_very_satisfied</i>Schauspieler
-          </li>
-        </ul>
-      </div>
+</div>
+  <div class="card z-depth-3 col x16 s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Logge.jpg">
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/ferd.png" alt="Chris" class="circle responsive-img white" id="ferd">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Chris</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">settings</i>Technik
-          </li>
-          <li>
-            <i class="material-icons">videocam</i>Kamera
-          </li>
-          <li>
-            <i class="material-icons">mic</i>Ton
-          </li>
-          <li>
-            <i class="material-icons">filter_b_and_w</i>Post-Production
-          </li>
-        </ul>
-      </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Logge</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/lenn.png" alt="Lenn" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Leonhard</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">book</i>Autor
-          </li>
-          <li>
-            <i class="material-icons">sentiment_very_satisfied</i>Schauspieler
-          </li>
-          <li>
-            <i class="material-icons">autorenew</i>Oganisation
-          </li>
-          <li>
-            <i class="material-icons">filter_b_and_w</i>Post-Production
-          </li>
-        </ul>
-      </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Logge</b><i class="material-icons right">close</i></span>
+      <p>Organisation</p>
+      <p>Post-Production</p>
+      <p>VFX</p>
+      <p>Schauspieler</p>
+      <p>Homepage</p>
     </div>
-  </div>
-  <div class="card-panel z-depth-3 col xl6 l12 m12 s12 person-card grey">
-    <div class="row valign-wrapper" style="margin-top:20px;">
-      <div class="col s5">
-        <img src="./Bilder/passi.png" alt="Pascal" class="circle responsive-img white">
-      </div>
-      <div class="col s7 card grey lighten-3">
-        <h2 class="card-title center">Pascal</h2>
-        <ul class="flow-text">
-          <li>
-            <i class="material-icons">highlight</i>Licht
-          </li>
-          <li>
-            <i class="material-icons">settings</i>Technik
-          </li>
-          <li>
-            <i class="material-icons">sentiment_very_satisfied</i>Schauspieler
-          </li>
-        </ul>
-      </div>
+  </div>          
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Julian.jpg">
     </div>
-  </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Julian</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4"><b>Julian</b><i class="material-icons right">close</i></span>
+      <p>Organisation</p>
+      <p>Catering</p>
+      <p>Ton</p>
+      <p>Requisitenbau</p>
+      <p>Homepage</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Sebastian.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Sebastian</b><i class="material-icons right">close</i></span>
+      <p>Produzent</p>
+      <p>Regie</p>
+      <p>Post-Production</p>
+      <p>Autor</p>
+      <p>Organisation</p>
+    </div>
+</div>
+   
+<p class="flow-text">Schauspieler</p>  
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Carina.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Carina</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Carina</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+      <p>Maske</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Christian.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Christian</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Christian</b><i class="material-icons right">close</i></span>
+      <p>Post-Production</p>
+      <p>VFX</p>
+      <p>Organisation</p>
+      <p>Technik</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Frankie.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Frankie</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+      <p>Organisation</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Leon.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Leon</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Leon</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Leonhard.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Leonhard</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+      <p>Post-Production</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Manuela.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Manuela</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Marleen.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Marleen</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Noah.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Noah</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Noah</b><i class="material-icons right">close</i></span>
+      <p>Technik</p>
+      <p>Licht</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Pascal.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Pascal</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Patrick.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Patrick</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+      <p>Organisation</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Paul.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Paul</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Paul</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Till.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Till</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Till</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+<div class="card z-depth-3 col s12 m6 l3">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img class="activator" src="./Bilder/team/Toni.jpg">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4"><b>Toni</b><i class="material-icons right">more_vert</i></span>
+      <!--<p><a href="#">Weitere Infos</a></p>-->
+    </div>
+    <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4"><b>Toni</b><i class="material-icons right">close</i></span>
+      <p>Schauspieler</p>
+    </div>
+</div>
+
+
+
+
 </div>
 <script>
   var currPage = "team";
